--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,10 +7,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - uses: actions/setup-go@v3
       - name: Execute script
         run: |
           chmod +x ./build.sh
-          ./build.sh
+          ./script.sh
