--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/setup-go@v3
       - name: Execute script
         run: |
-          chmod +x ./build.sh
+          chmod +x ./script.sh
           ./script.sh
