--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - uses: actions/setup-go@v3
-      - name: Setup artifact director
-        run:  mkdir -p /app/artifacts
+      - name: Setup artifact directory
+        run:  mkdir -p $GITHUB_WORKSPACE/artifacts
       - name: Execute script
         run: |
           chmod +x ./script.sh
@@ -19,4 +19,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: artifact
-          path: /app/artifacts
+          path: ${{ github.workspace }}/artifacts
