--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+    paths:
+      - "script.sh"
+      - ".github/workflows/build.yaml"
 jobs:
   build:
     runs-on: ubuntu-latest
