--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,6 +6,7 @@ on:
     paths:
       - "script.sh"
       - ".github/workflows/build.yaml"
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
